// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for disabled: false, hasCustomDropdown: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #6B6D70 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
}
::slotted(select:focus) {
  border-color: #010205 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #010205 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(min-width:480px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    text-indent: 0;
  }
}

@media(min-width:760px) {
  .label__text {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }
}

@media(min-width:1000px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    text-indent: 0;
  }
}

@media(min-width:1300px) {
  .label__text {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }
}

@media(min-width:1760px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    text-indent: 0;
  }
}

@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])) {
    border-color: #010205 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for disabled: false, hasCustomDropdown: false, hideLabel: false, state: success and theme: dark 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #09D087 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
}
::slotted(select:focus) {
  border-color: #FBFCFF !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #069561 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  text-indent: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #AFB0B3;
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #09D087;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #069561 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for disabled: false, hasCustomDropdown: false, hideLabel: false, state: success and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #197E10 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
}
::slotted(select:focus) {
  border-color: #010205 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #0E4809 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  text-indent: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #0E4809 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for disabled: false, hasCustomDropdown: false, hideLabel: true, state: error and theme: dark 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #FC4040 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
}
::slotted(select:focus) {
  border-color: #FBFCFF !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #FB0404 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #AFB0B3;
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FC4040;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #FB0404 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for disabled: false, hasCustomDropdown: false, hideLabel: true, state: error and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #CC1922 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
}
::slotted(select:focus) {
  border-color: #010205 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #951219 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #951219 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for disabled: false, hasCustomDropdown: false, hideLabel: true, state: none and theme: dark 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #88898C !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
}
::slotted(select:focus) {
  border-color: #FBFCFF !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #FBFCFF !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #AFB0B3;
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])) {
    border-color: #FBFCFF !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for disabled: false, hasCustomDropdown: false, hideLabel: true, state: none and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #6B6D70 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
}
::slotted(select:focus) {
  border-color: #010205 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #010205 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])) {
    border-color: #010205 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for disabled: false, hasCustomDropdown: true, hideLabel: false, state: error and theme: dark 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #FC4040 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
  border-color: transparent !important;
}
::slotted(select:focus) {
  border-color: #FBFCFF !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #FB0404 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  text-indent: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #AFB0B3;
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FC4040;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #FB0404 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for disabled: false, hasCustomDropdown: true, hideLabel: false, state: error and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #CC1922 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
  border-color: transparent !important;
}
::slotted(select:focus) {
  border-color: #010205 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #951219 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  text-indent: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #951219 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for disabled: false, hasCustomDropdown: true, hideLabel: false, state: none and theme: dark 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #88898C !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
  border-color: transparent !important;
}
::slotted(select:focus) {
  border-color: #FBFCFF !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #FBFCFF !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  text-indent: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #AFB0B3;
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])) {
    border-color: #FBFCFF !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for disabled: false, hasCustomDropdown: true, hideLabel: false, state: none and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #6B6D70 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
  border-color: transparent !important;
}
::slotted(select:focus) {
  border-color: #010205 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #010205 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  text-indent: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])) {
    border-color: #010205 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for disabled: false, hasCustomDropdown: true, hideLabel: true, state: success and theme: dark 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #09D087 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
  border-color: transparent !important;
}
::slotted(select:focus) {
  border-color: #FBFCFF !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #069561 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #AFB0B3;
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #09D087;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #069561 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for disabled: false, hasCustomDropdown: true, hideLabel: true, state: success and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #197E10 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
  border-color: transparent !important;
}
::slotted(select:focus) {
  border-color: #010205 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #0E4809 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #0E4809 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for disabled: true, hasCustomDropdown: true, hideLabel: true, state: error and theme: dark 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  width: 100% !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #FC4040 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  position: static !important;
  z-index: 0 !important;
  cursor: pointer !important;
  padding: 8px calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) 8px 16px !important;
}
::slotted(select:focus) {
  border-color: #FBFCFF !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #FB0404 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.icon {
  position: absolute;
  bottom: 13px;
  right: 15px;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  pointer-events: none;
  color: #7E7F82;
  cursor: not-allowed;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FC4040;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #FB0404 !important;
  }
}
"
`;
